<resources>
    <string name="app_name">PersonalFinanceApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--      Sign In strings     !-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">I already have an account</string>
    <string name="dont_have_account">I don\'t have an account</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>

    <string name="home_description">These are your transactions</string>

    <string name="expenditures">Expenditures</string>
    <string name="incomes">Incomes</string>
    <string name="expenditure">Expenditure</string>
    <string name="income">Income</string>

    <string name="home">Home</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="barcodes">Barcodes</string>

    <string name="show_expenditures">Show Expenditures for: </string>
    <string name="show_incomes">Show Incomes for: </string>

    <string name="all_time">All time</string>
    <string name="this_year">This year</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>
    <string name="today">Today</string>
    <string name="other">Other</string>

    <string name="add_transaction">Add transaction</string>

    <string-array name="spinner_choices_time">
        <item>Show transactions from</item>
        <item>Last 364 days</item>
        <item>Last 30 days</item>
        <item>Last 7 days</item>
        <item>Today</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner_categories_expenditure">
        <item>Food</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Accomodation</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner_categories_income">
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_user">Edit user</string>

</resources>
