<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_expenditures"
            android:icon="@drawable/ic_expenditure"
            android:title="@string/expenditures" />
        <item
            android:id="@+id/nav_incomes"
            android:icon="@drawable/ic_income"
            android:title="@string/incomes" />
        <item
            android:id="@+id/nav_barcode"
            android:icon="@drawable/ic_barcode_scan"
            android:title="@string/scan_barcode" />

        <item
            android:id="@+id/nav_saved_barcodes"
            android:icon="@drawable/ic_barcode"
            android:title="@string/barcodes"/>
    </group>
</menu>
